# Final_Project

./: .pre-commit-config.yaml  Index_Crimes_by_County_and_Agency__Beginning_1990.csv  Index__Violent__Property__and_Firearm_Rates_By_County__Beginning_1990.csv  README.md  eda_cleaning.ipynb  environment.yml  model_training.py  pyproject.toml
data/: data.py  final_df.parquet  unemployment.csv  urban.csv
eda_plot/: plotting.py
evaluation/: evaluation_predictions.py
model_analysis/: model_training.py
src/: evaluation_predictions.py  feature_engineering.py
test/: test_log.py
