[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "final_project"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = ">=3.10"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[project]
name = "final_project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "dalex",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "pre-commit",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
